styles/stories.scss
@import 'colors';
@import 'fonts';

.stories-top-bar {
  display: flex;
  justify-content: space-between;
}

.create-post-button {
  border-radius: .5rem;

  button {
    align-self: flex-end;
    margin-bottom: 2.5rem;
  }

  &:hover {
    background-color: $facebook-blue;
  }
}

.stories-about-us {
  font-size: 1rem;
  line-height: 1.5;
  margin-bottom: 3rem;
}

.post-grid {
  display: flex;
  gap: .5rem;
}

.post {
  border: .01rem solid $litterpic-green;
  border-radius: .5rem;
  margin-bottom: 1rem;
  position: relative;
}

.likes-comments {
  display: flex;
  justify-content: center;
  margin-bottom: .5rem;

  .likes-comments-likes-field {
    margin-right: 2rem;
  }

  .likes-comments-comment-field {
    margin-left: 2rem;
  }
}


.like-count,
.comment-count {
  margin-left: 5px;
}

.fa-comment {
  margin-left: 10px;
}

.filled-comment {
  color: $litterpic-green;
}

.filled-heart {
  color: $red;
}

.empty-heart {
  svg {
    border: 2px solid $red;
  }
}

.story-comment-input {
  display: flex;
  flex-direction: column;

  .comment-submit-button {
    border-radius: .5rem;
    margin-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
  }

  .comment-text-input {
    font-size: 1rem;
    height: 60px;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
  }
}

.comment {
  align-items: center;
  display: grid;
  gap: 10px;
  grid-template-columns: auto 1fr;
  margin-bottom: 10px;

  img {
    align-self: flex-start;
    border-radius: 50%;
    grid-row: span 2;
    height: 30px;
    margin-left: .5rem;
    width: 30px;
  }

  .comment-time {
    font-size: .6rem;
  }

  .comment-text {
    font-size: .8rem;
    grid-column: 2;

    .comment-user {
      font-weight: bold;
      margin-right: 5px;
    }
  }
}

.suggestion-item {
  background-color: $white;
  cursor: pointer;
  padding: .5rem;

  &:hover {
    background-color: $litterpic-green;
  }

  &.active {
    background-color: $litterpic-green;
    color: $white;
  }
}

.post-carousel {
  border: 1px $litterpic-green;
  display: flex;
  justify-content: center;
  position: relative;
}

// https://developer.mozilla.org/en-US/docs/Web/CSS/object-fit
.carousel-image {
  height: 450px;
  object-fit: contain;
  overflow: hidden;
  width: 700px;
}

.carousel-chevron {
  background-color: $white;
  color: $litterpic-green;
  height: auto;
  position: relative;
  z-index: 1;

  &:hover {
    color: $black;
  }
}

.carousel-chevron-left {
  padding-right: .3rem;
}

.carousel-chevron-right {
  padding-left: .3rem;
}

.post-username-location {
  display: grid;
  grid-template-columns: 10% 40% 50%;
  justify-content: space-between;
  padding-left: 2rem;
  padding-top: 1rem;
}

.post-time {
  align-items: center;
  display: flex;
  font-size: .75rem;
  grid-column: 3;
  grid-row: 2;
  justify-content: flex-end;
  margin-top: -.5rem;
  padding-right: 1rem;
}

.profile-image {
  display: flex;
  justify-content: flex-start;

  img {
    border-radius: 50%;
    height: 40px;
    object-fit: fill;
    width: 40px;
  }
}

.post-ambassador {
  align-items: center;
  display: inline-flex;;
  font-weight: normal;
  margin-left: 2rem;

  &-text {
    font-size: .75rem;
  }
}

.post-user-name {
  align-items: start;
  display: flex;
  flex-direction: column;
  font-weight: bold;
}

.post-location {
  align-items: center;
  color: $dark-blue;
  display: flex;
  font-size: .75rem;
  justify-self: end;
  padding-right: 1rem;
}

.post-title {
  font-size: 1.5em;
  font-weight: bolder;
  margin-left: 1rem;
  margin-top: 1.25rem;
}

.post-litter-weight-collected {
  font-weight: bold;
  margin-bottom: .5rem;
  margin-top: 1.25rem;
  text-align: center;
}

.post-description {
  font-family: inherit;
  font-size: 1rem;
  height: auto;
  padding: 1rem 2rem;
  width: auto;
}

.recent-location-select {
  font-size: .9rem;
  width: 605px;
}

.create-post-content {
  display: flex;
  justify-content: center;

  button {
    border-radius: .5em;
    font-size: 1rem;
    font-weight: normal;
    margin-top: .5rem;

    &:hover {
      background-color: $facebook-blue;
    }
  }

  img {
    margin: 5px;
    max-height: 300px;
    max-width: 20vw;
    object-fit: cover;
  }

  input {
    font-size: .9rem;
    width: 600px;
  }

  textarea {
    cursor: text;
    font-size: .9rem;
    height: 200px;
    line-height: 1.5;
    padding: 5px;
    width: 600px;
  }
}

.create-post-limit-message {
  color: $litterpic-green;
  font-size: .7rem;
  margin-bottom: 1rem;
  margin-left: .5rem;
  margin-top: .25rem;
}

.create-post-file-input {
  margin: 0;
  padding: 0;
}

.custom-file-button {
  background-color: $litterpic-green;
  border: 0;
  border-radius: .5rem;
  color: $white;
  cursor: pointer;
  display: inline-block;
  font-family: Poppins, sans-serif;
  font-size: 1rem;
  padding: .25rem .5rem;
  text-align: center;
  text-decoration: none;

  &:hover {
    background-color: $facebook-blue;
  }
}

.meatball-menu {
  cursor: pointer;
  float: right;
  margin-right: .5rem;
  margin-top: .5rem;
}

.grayed-out {
  color: $dark-gray;
  cursor: not-allowed;
  font-size: 1rem;
  margin-left: .5rem;
}

.post-dropdown-menu {
  background-color: $gray;
  border: 1px solid $gray;
  border-radius: 4px;
  display: none;
  left: 78%;
  padding: 0;
  position: absolute;
  right: 0;
  text-align: left;
  top: 6%;
  z-index: 1;

  ul {
    list-style: none;
    margin: 1rem 0 0;
    padding: 0;
  }

  li {

    &:not(.grayed-out) {
      cursor: pointer;
      font-family: Rubik, Times, sans-serif;
      font-size: 1rem;
      margin-left: .5rem;
      padding: 0;
    }

    &:hover {
      color: $litterpic-green;
    }
  }

  &.show {
    display: inline-block;
    padding: 0;
    width: 130px;
  }
}

.back-to-top-button {
  background-color: $litterpic-green;
  border: 0;
  color: $white;
  border: none;
  border-radius: .5rem;
  cursor: pointer;
  font-family: Poppins, sans-serif;
  font-size: 1rem;
  margin-left: auto;
  padding: 0.25rem 0.5rem;
  text-align: center;
  text-decoration: none;
  z-index: 1000;
}

.button-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;
}


@media (max-width: 76.5rem) {
  .profile-image {
    justify-content: center;
    padding-right: 0;
  }

  .post-username-location {
    display: grid;
    grid-template-columns: 20% 40% 40%;
    justify-content: space-between;
    padding-left: .5rem;
    padding-right: .5rem;
    padding-top: 1rem;
  }

  .post-user-name {
    align-items: center;
    display: flex;
    font-size: .75rem;
    justify-content: flex-start;
  }

  .post-location {
    a {
      font-size: .75rem;
    }
  }

  .post {
    border: .01rem solid $litterpic-green;
    border-radius: .5rem;
    margin-bottom: .5rem;
  }

  .carousel-chevron {
    background-color: $white;
    color: $litterpic-green;
    height: auto;
    position: relative;
    z-index: 1;

    &:hover {
      color: $black;
    }
  }

  .carousel-chevron-left {
    padding-right: .01rem;
  }

  .carousel-chevron-right {
    padding-left: .01rem;
  }

  .carousel-image {
    height: auto;
    object-fit: fill;
    overflow: hidden;
    width: 400px;
  }

  .post-dropdown-menu {
    left: 63%;
  }

  .recent-location-select {
    width: 350px;
  }

  .create-post-content {
    display: flex;
    justify-content: center;

    img {
      max-width: 99vw;
      object-fit: cover;
    }

    input {
      width: 80vw;
    }

    textarea {
      height: 100px;
      width: 80vw;
    }
  }

  .create-post-limit-message {
    font-size: .6rem;
  }
}


@media (max-width: 102.25rem) and (orientation: landscape) {
  .profile-image {
    justify-content: center;
    padding-right: 0;
  }

  .post-username-location {
    display: grid;
    grid-template-columns: 20% 40% 40%;
    justify-content: space-between;
    padding-left: .5rem;
    padding-right: .5rem;
    padding-top: 1rem;
  }

  .post-user-name {
    align-items: center;
    display: flex;
    font-size: .75rem;
    justify-content: flex-start;
  }

  .post-location {
    a {
      font-size: .75rem;
    }
  }

  .post {
    border: .01rem solid $litterpic-green;
    border-radius: .5rem;
    margin-bottom: .5rem;
  }

  .carousel-chevron {
    background-color: $white;
    color: $litterpic-green;
    height: auto;
    position: relative;
    z-index: 1;

    &:hover {
      color: $black;
    }
  }

  .carousel-chevron-left {
    padding-right: .01rem;
  }

  .carousel-chevron-right {
    padding-left: .01rem;
  }

  .carousel-image {
    height: auto;
    object-fit: fill;
    overflow: hidden;
    width: 300px;
  }

  .recent-location-select {
    width: 460px;
  }

}

